Additional metadata improvements

--- a/index.html
+++ b/index.html
@@ -3,29 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ian Pike - Software Engineer</title>
+    <title>Ian Pike - A Software Engineer</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Welcome to Ian Pike's Portfolio. Explore my work as a software engineer specializing in C++, C#, game development, and cutting-edge technology.">
-    <meta name="keywords" content="Ian Pike, Software Engineer, Portfolio, C++, C#, Game Development, Programming, Open Source, Technology, Software Development">
+    <meta name="description" content="Welcome to Ian Pike's Portfolio. Discover my work as a software engineer, specializing in C++, C#, and broader computer science. Explore projects spanning game development, library creation, tool development, and much more.">
+    <meta name="keywords" content="Ian Pike, Software Engineer, Portfolio, C++, C#, Game Development, Programming, Open Source, Technology, Software Development, Tools, Libraries">
     <meta name="author" content="Ian Pike">
     <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#007BFF">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="https://www.ianpike.com">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Ian Pike - Software Engineer Portfolio">
-    <meta property="og:description" content="Discover Ian Pike's work as a software engineer. Specializing in game development, C++, and open-source work.">
+    <meta property="og:title" content="Ian Pike - A Software Engineer">
+    <meta property="og:description" content="Discover Ian's work as a software engineer, with expertise in C++, C#, and broader computer science. Explore projects spanning game development, library creation, tool development, and much more.">
     <meta property="og:image" content="https://www.ianpike.com/cdn/self/machine_hero_shot.jpg">
     <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="Ian Pike's profile picture showing a professional machine hero shot.">
     <meta property="og:url" content="https://www.ianpike.com">
     <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ian Pike - A Software Engineer">
-    <meta name="twitter:description" content="Discover Ian Pike's work as a software engineer. Specializing in game development, C++, and open-source work.">
+    <meta name="twitter:description" content="Discover Ian's work as a software engineer, with expertise in C++, C#, and broader computer science. Explore projects spanning game development, library creation, tool development, and much more.">
     <meta name="twitter:image" content="https://www.ianpike.com/cdn/self/machine_hero_shot.jpg">
+    <meta name="twitter:image:alt" content="Ian Pike's profile picture showing a professional machine hero shot.">
 
     <!-- Preload used resource -->
     <link rel="preload" href="homepage.css" as="style">
