--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             "https://www.linkedin.com/in/ian-pike-27319083/"
           ],
           "jobTitle": "Software Engineer",
-          "description": "Unemployed software engineer actively seeking work in game development, C++, and cutting-edge technologies.",
+          "description": "Unemployed software engineer actively seeking work in software engineering and computer science.",
           "seeks": {
             "@type": "JobPosting",
             "title": "Software Engineer",
